# Open-Biomanual-Manipulation-System

./: LICENSE.md  README.md
Assembly Guide/: Bill_of_Materials.xlsx  README.md
CAD/: README.md  open_bmp_asm.7z
CAD/Back_Transmission_Pulley/: 16004-zz-20x42x8_bearing.stp  6804_zz_bearing_20x32x7.stp  Readme.md  obmp-btp-1620.stp  obmp-btp-1621.stp  obmp-btp-1622.stp  obmp-btp-1625.stp  obmp-btp-1630.stp  obmp-btp-1631.stp  obmp-btp-1632.stp  obmp-btp-1633.stp  obmp-btp-1640.stp  obmp-btp-1642.stp  obmp-btp-1643.stp  obmp-btp-1652.stp  obmp-btp-1653.stp  obmp-btp-p3-1623.stp  obmp-btp-p3-1624.stp  obmp-btp-p3-1641.stp  obmp-btp-p3-1650.stp  obmp-btp-p3-1651.stp  obmp-btp-p5-1610.stp  obmp-btp-p5-1644.stp  open-builds-v-groove-5mm-bore.stp
CAD/Back_Transmission_Unit/: Readme.md  asl-140-085-bearing.stp  hwcadj9-cable-adjuster.stp  obmp-btu-1520.stp  obmp-btu-1530.stp  obmp-btu-1534.stp  obmp-btu-p3-1531.stp  obmp-btu-p3-1532.stp  obmp-btu-p3-1533.stp  obmp-btu-p3-1535.stp  obmp-btu-p5-1510.stp  open-builds-v-groove-5mm-bore.stp
CAD/Base_Stand/: Readme.md  obmp-ba-h-1000_asm.stp  obmp-ba-h-1020.stp  obmp-ba-h-1030.stp  obmp-ba-h-1040.stp  obmp-ba-h-1050.stp  obmp-ba-h-1060.stp  obmp-ba-h-1100.stp  obmp-ba-h-fast-g1.stp  obmp-ba-h-fast-g2.stp  obmp-ba-h-fast-l.stp  obmp-ba-h-fast-t.stp
CAD/Elbow/: 5905K349_HK0508_Needle-Roller Bearing.STEP  Readme.md  gs-9025mg.stp  hwcadj9-cable-adjuster-nut.stp  obmp-elb-1300__out.log.1  obmp-elb-1300_asm.stp  obmp-elb-1310.stp  obmp-elb-1316.stp  obmp-elb-1317.stp  obmp-elb-1320.stp  obmp-elb-1322.stp  obmp-elb-1323.stp  obmp-elb-1330.stp  obmp-elb-p2-1324.stp  obmp-elb-p3-1311.stp  obmp-elb-p3-1312.stp  obmp-elb-p3-1313.stp  obmp-elb-p3-1314.stp  obmp-elb-p3-1315.stp  obmp-elb-p3-1321.stp  obmp-tube-coupler-25mm.stp  rf2181-ronstan-thimble-4mm.stp  v522zz-5mm-vgroove-bearing.stp
CAD/Forearm_ASL_Hand/: 9g_lever.stp  Readme.md  fs5109mservo.stp  fs5115_servo_horn.stp  gs-9025mg.stp  obmp-fah-1810.stp  obmp-fah-1811.stp  obmp-fah-1820.stp  obmp-fah-1830.stp  obmp-fah-1840.stp  obmp-fah-1841.stp  obmp-fah-1842.stp  obmp-fah-1851.stp  obmp-fah-1852.stp  obmp-fah-1853.stp  obmp-fah-1854.stp  obmp-fah-1856.stp  obmp-fah-1857.stp  obmp-fah-1858.stp
CAD/Forearm_Adaptor_Modules/: 6806-zz-30x42x7_bearing.stp  Readme.md  obmp-fam-a-1000_asm.stp  obmp-fam-a-1100.stp  obmp-fam-a-1110.stp  obmp-fam-a-1120.stp  obmp-fam-a-1400_asm.stp  obmp-fam-a-1410.stp  obmp-fam-a-1420.stp  obmp-fam-a-1430.stp  obmp-fam-a-1440.stp  obmp-fam-b-1000.stp  obmp-fam-b-1400_asm.stp  obmp-fam-b-1410.stp  obmp-fam-b-1420.stp  obmp-fam-c-1000.stp  obmp-fam-c-1400.stp  obmp-fam-d-1000.stp  obmp-fam-d-1400.stp  obmp-fam-e-1000.stp  obmp-fam-e-1400.stp  rds5160_v39_asm.stp
CAD/Forearm_Dynamixel_Hand/: Readme.md  XC-330.stp  mf52zz_flanged_bearing.stp  mr52zz_2x5x2-5_bearing.stp  obmp-fdh-1710.stp  obmp-fdh-1720.stp  obmp-fdh-1730.stp  obmp-fdh-1740.stp  obmp-fdh-1751.stp  obmp-fdh-1752.stp  obmp-fdh-1753.stp  obmp-fdh-1754.stp  obmp-fdh-1756.stp  obmp-fdh-1757.stp  obmp-fdh-1758.stp  obmp-fdh-1760.stp
CAD/Forearm_Wrist_Module/: 6805-zz.stp  6805-zz__out.log.1  Readme.md  XM_H-430_idler.stp  XM_H-540_idle.stp  f6806zz_30x42x7.stp  f6806zz_30x42x7__out.log.1  obmp-fwm-1600__out.log.1  obmp-fwm-1600_asm.stp  obmp-fwm-1610.stp  obmp-fwm-1610__out.log.1  obmp-fwm-1620.stp  obmp-fwm-1620__out.log.1  obmp-fwm-1630.stp  obmp-fwm-1630__out.log.1  obmp-fwm-1640.stp  obmp-fwm-1640__out.log.1  obmp-fwm-1650.stp  obmp-fwm-1660.stp  (+5 more)
Printer-settings/: giga.fff
Printer_settings/: prusamk2.fff  prusamk2_ninja.ini
Software/: README.md  usercfg.txt
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/: CMakeLists.txt  README.md  package.xml
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/include/: config_left.ini  config_right.ini
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/include/captoglove_ros/: captoglove_ros.h  ros_translate.h
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/launch/: captoglove_ros_wrapper.launch  gloves_uav_control.launch
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/msg/: FingerFeedbackMsg.msg
Software/CaptoGloveDocker/Melodic_11_Projects/catkin_ws/src/captoglove_ros_wrapper/src/: captoglove_ros.cpp  main-o.cpp  main.cpp  ros_translate.cpp
Software/moah_src/moa_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
Software/moah_src/moa_driver/include/moa_driver/: hardware_interface.hpp
Software/moah_src/moa_driver/src/: hardware_interface.cpp  moa_driver_node.cpp
Software/moah_src/ndx_util/: CMakeLists.txt  package.xml  setup.py  tf_util.h
Software/moah_src/ndx_util/config/: webcam_config.yaml
Software/moah_src/ndx_util/include/ndx_util/: tf_util.h
Software/moah_src/ndx_util/launch/: are_tfs_linked.launch  aruco_tracker.launch  pub_mesh.launch  publish.launch  tf_recorder.launch  webcam.launch  webcam_aruco_tracker.launch
Software/moah_src/ndx_util/scripts/: are_tfs_linked  aruco_tracker  ft_recorder  moving_avg_node  node_template_python  publish.py  static_transform_mux  tf2js  tf_calibration  tf_recorder  tf_trail  webcam
Software/moah_src/ndx_util/src/: marker_mesh_node.cpp  tests.cpp  tf_router.cpp  tf_util.cpp  wrench_frame_changer_node.cpp
Software/moah_src/ndx_util/src/ndx_util/: NdxArm.py  camera_calibration_util.py  tf_util.py
Software/moah_src/ndx_util/urdf/: base_xacros.xacro
Software/moah_src/ndx_util/xacro/: spherical_joint_macro.xacro
Software/moah_src/polhemus_ros_driver/: CMakeLists.txt  README.md  package.xml
Software/moah_src/polhemus_ros_driver/etc/: 90-Polhemus_trkr.rules  install.bash  polmount.sh
Software/moah_src/polhemus_ros_driver/etc/usbfw/: FastrakUSB.hex  LbtyUsb.hex  LbtyUsbHS.hex  Makefile.am  Makefile.in  PatriotUSB.hex  PatriotUSB2.hex
Software/moah_src/polhemus_ros_driver/launch/: start.launch
Software/moah_src/polhemus_ros_driver/src/: liberty.cpp  liberty.h  polhemus_tf_broadcaster.cpp  protocol.h
(+306 files in other folders)
