<?xml version="1.0"?>
<package format="2">
  <name>ndx_util</name>
  <version>0.0.0</version>
  <description>The ndx_util package</description>

  <!-- Maintainer -->
  <maintainer email="ggor290@aucklanduni.ac.nz">Gal Gorjup</maintainer>

  <!-- License -->
  <license>NDX</license>

  <!-- Authors -->
  <author email="ggor290@aucklanduni.ac.nz">Gal Gorjup</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
	  <!--  <build_depend>libeigen3-dev</build_depend> -->

  <!-- Export -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
